feat: job endpoints
