# openapi.yaml
@@ -66,6 +66,28 @@ paths:
         403:
           description: Forbidden
 
+  /jobs/{id}/pay:
+    post:
+      summary: Pay for a job as a client
+      operationId: payJob
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          description: OK
+        400:
+          description: Bad Request
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+        404:
+          description: Not Found
+
 components:
   securitySchemes:
     ProfileIdAuth:
@@ -92,4 +114,30 @@ components:
         ContractorId:
           type: integer
         ClientId:
+          type: integer
+
+    Job:
+      type: object
+      required:
+        - description
+        - price
+        - ContractId
+      properties:
+        id:
+          type: integer
+        description:
+          type: string
+        price:
+          type: number
+          minimum: 0
+          maximum: 9999999999
+        paid:
+          type: boolean
+          default: false
+          nullable: true
+        paymentDate:
+          type: string
+          format: date
+          nullable: true
+        ContractId:
           type: integer
