# src/services/service-contracts/JobDto.ts
@@ -1,0 +1,5 @@
+import type { Job } from '../../models'
+
+export type JobDto = Readonly<
+  Pick<Job, 'id' | 'description' | 'price' | 'paid' | 'paymentDate' | 'ContractId'>
+>
